kustomize/ingresses/prometheus-external-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    meta.helm.sh/release-name: prometheus-stack
    meta.helm.sh/release-namespace: monitoring
  creationTimestamp: "2024-07-30T02:55:04Z"
  generation: 1
  labels:
    app: kube-prometheus-stack-prometheus
    app.kubernetes.io/instance: prometheus-stack
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/part-of: kube-prometheus-stack
    app.kubernetes.io/version: 61.6.0
    chart: kube-prometheus-stack-61.6.0
    heritage: Helm
    release: prometheus-stack
  name: prometheus-stack-kube-prom-prometheus
  namespace: monitoring
  resourceVersion: "410820"
  uid: e558d1a2-3558-434f-b43a-b4203fe379ae
spec:
  ingressClassName: nginx-internal
  rules:
  - host: prometheus.home
    http:
      paths:
      - backend:
          service:
            name: prometheus-stack-kube-prom-prometheus
            port:
              number: 9090
        path: /
        pathType: ImplementationSpecific
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.192
